--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": { "/workspace/obsidian-snippet-downloader/scripts/setup.sh" },
+	// "postCreateCommand": {},
 
 	// Configure tool-specific properties.
 	// "customizations": {},
